[gd_scene load_steps=2 format=3 uid="uid://xxxxxxxxxxxxxxx"]

[ext_resource type="Script" path="res://scenes/Lobby.gd" id="1_xxxxx"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxxxx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HostCodeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Host Code: "
horizontal_alignment = 1

[node name="ChatContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ChatDisplay" type="TextEdit" parent="VBoxContainer/ChatContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="ChatInput" type="LineEdit" parent="VBoxContainer/ChatContainer"]
layout_mode = 2
placeholder_text = "Type your message here..."

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"